--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,7 @@
     "~types/request": "./types/request.ts",
     "~crypto/jwt": "./crypto/jwt.ts",
     "~crypto/auth": "./crypto/auth.ts",
-    "~crypto/pwd": "./crypto/pwd.ts"
+    "~crypto/pwd": "./crypto/pwd.ts",
+    "~middleware": "./middleware/mod.ts"
   }
 }
